# good-night

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
GoodNightApp/: CLAUDE.md  README.md
GoodNightApp/GoodNightApp/: ContentView.swift  DreamingManager.swift  GoodNightApp.swift  Info.plist  SheepAnimationView.swift  SkyOverlayWindow.swift
GoodNightApp/GoodNightApp.xcodeproj/: project.pbxproj
GoodNightApp/GoodNightApp/Assets.xcassets/AccentColor.colorset/: Contents.json
GoodNightApp/GoodNightApp/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
defaults/: config.yaml
defaults/artifacts/: claude-md.md  claude-skills.md
defaults/connectors/: claude-code.md
defaults/prompts/: deep-research.md  frustration-signals.md  pattern-detection.md
docs/: architecture.md
src/good_night/: __init__.py  config.py
src/good_night/api/: __init__.py  server.py
src/good_night/api/routes/: __init__.py
src/good_night/artifacts/: __init__.py  base.py  claude_md_handler.py  factory.py  generic_handler.py  skills_handler.py
src/good_night/cli/: main.py
src/good_night/connectors/: __init__.py  base.py  claude_code.py  factory.py  types.py
src/good_night/daemon/: __init__.py  lifecycle.py  main.py  pid_manager.py
src/good_night/dreaming/: __init__.py  events.py  merger.py  orchestrator.py  report.py  step1_analysis.py  step2_comparison.py  step3_resolution.py
src/good_night/dreaming/tools/: __init__.py  base.py  step1_tools.py  step2_tools.py  step3_tools.py
src/good_night/linter/: __init__.py  validator.py
src/good_night/linter/schemas/: resolution.json
src/good_night/observability/: __init__.py  judges.py  weave_integration.py
src/good_night/prompts/: __init__.py  handler.py
src/good_night/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  factory.py  types.py
src/good_night/storage/: __init__.py  redis_vectors.py  resolutions.py  state.py
tests/: __init__.py  test_config.py  test_merger.py  test_report.py  test_validator.py
