[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "good-night"
version = "0.1.0"
description = "AI reflection system that analyzes conversations and produces artifacts through dreaming agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Good Night Team" }
]
keywords = [
    "ai",
    "claude",
    "reflection",
    "dreaming",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "good-night[bedrock,dev]",
]

[project.scripts]
good-night = "good_night.cli.main:main"

[project.urls]
Homepage = "https://github.com/good-night/good-night"
Documentation = "https://github.com/good-night/good-night#readme"
Repository = "https://github.com/good-night/good-night"
Issues = "https://github.com/good-night/good-night/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/good_night"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/defaults",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
